Fixes alignment issues with pool listing
Bug-Url: https://bugzilla.redhat.com/1352149

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -266,9 +266,6 @@
 .c3-arc {
     cursor: default !important;
 }
-.overlap-donut-left{
-    margin-left:-18px;
-}
 .cursor-pointer{
     cursor:pointer;
 }
