--- a/app/styles/storage-list-view.scss
+++ b/app/styles/storage-list-view.scss
@@ -7,8 +7,8 @@
         padding-bottom: 5px;
         padding-top: 5px;
     }
-    .poolNameBox{
-        width:250px;
+    .pool-name-box{
+        width:200px;
         text-overflow:ellipsis;
     }
 }
